# PipeLineScraper

./: .gitignore  pyproject.toml
.github/workflows/: main.yml
src/: DockerFile  requirements.txt
src/pipescrape/: __init__.py  __main__.py  argParser.py  argValidator.py  exceptor.py  logger.py  output.txt  scrapecheck.ipynb  screpeBot.py
